// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/breadcrumb/demo/basic.md correctly 1`] = `
<div
  class="ant-breadcrumb"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      Home
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        href=""
      >
        Application Center
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      <a
        href=""
      >
        Application List
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      An Application
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`renders ./components/breadcrumb/demo/router.md correctly 1`] = `
<div
  class="demo"
>
  <div
    class="demo-nav"
  >
    <a
      href="#/"
    >
      Home
    </a>
    <a
      href="#/apps"
    >
      Application List
    </a>
  </div>
  Home Page
  <div
    class="ant-alert ant-alert-info ant-alert-no-icon"
    data-show="true"
    style="margin:16px 0;"
  >
    <span
      class="ant-alert-message"
    >
      Click the navigation above to switch:
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-breadcrumb"
  >
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <span>
          Home
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/breadcrumb/demo/router-4.md correctly 1`] = `
<div
  class="demo"
>
  <div
    class="demo-nav"
  >
    <a
      href="#/"
    >
      Home
    </a>
    <a
      href="#/apps"
    >
      Application List
    </a>
  </div>
  Home Page
  <div
    class="ant-alert ant-alert-info ant-alert-no-icon"
    data-show="true"
    style="margin:16px 0;"
  >
    <span
      class="ant-alert-message"
    >
      Click the navigation above to switch:
    </span>
    <span
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-breadcrumb"
  />
</div>
`;

exports[`renders ./components/breadcrumb/demo/separator.md correctly 1`] = `
<div
  class="ant-breadcrumb"
>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      Home
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href=""
    >
      Application Center
    </a>
    <span
      class="ant-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href=""
    >
      Application List
    </a>
    <span
      class="ant-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      An Application
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
</div>
`;

exports[`renders ./components/breadcrumb/demo/withIcon.md correctly 1`] = `
<div
  class="ant-breadcrumb"
>
  <span>
    <a
      class="ant-breadcrumb-link"
      href=""
    >
      <i
        class="anticon anticon-home"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="home"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M932.4 442.2L560.3 84.1c-27.4-24.8-69.1-24.8-96.5 0L91.6 442.2c-14.8 13.3-15.9 36-2.6 50.8 13.3 14.8 36.1 15.9 50.8 2.6L512 137.5l372.2 358.1c14.8 13.3 37.5 12.2 50.8-2.6 13.3-14.8 12.2-37.5-2.6-50.8zM833 575c-19.9 0-36 16.1-36 36v277H654V648c0-39.8-32.2-72-72-72H442c-39.8 0-72 32.2-72 72v240H227V611c0-19.9-16.1-36-36-36s-36 16.1-36 36v277c0 39.8 32.2 72 72 72h570c39.8 0 72-32.2 72-72V611c0-19.9-16.1-36-36-36zm-391 73h140v240H442V648z"
          />
        </svg>
      </i>
    </a>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href=""
    >
      <i
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="user"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M819.4 793c-16.8-39.7-40.9-75.4-71.5-106-30.6-30.6-66.3-54.7-106-71.5-13.5-5.7-27.4-10.5-41.4-14.4 39.6-13.4 75.9-35.8 106.3-66.2 52-52 80.7-121.2 80.7-194.7s-28.6-142.7-80.7-194.7c-52-52-121.2-80.7-194.7-80.7s-142.7 28.6-194.7 80.7c-52 52-80.7 121.2-80.7 194.7s28.6 142.7 80.7 194.7c30.4 30.4 66.7 52.8 106.3 66.2-14 3.9-27.9 8.6-41.4 14.4-39.7 16.8-75.4 40.9-106 71.5-30.6 30.6-54.7 66.3-71.5 106-17.4 41.2-26.2 84.8-26.2 129.9 0 19.9 16.1 36 36 36s36-16.1 36-36c0-69.9 27.2-135.6 76.6-185 49.4-49.4 115.1-76.6 185-76.6s135.6 27.2 185 76.6 76.6 115.1 76.6 185c0 19.9 16.1 36 36 36s36-16.1 36-36c-.2-45.1-9-88.7-26.4-129.9zM308.6 340.2c0-112.2 91.3-203.4 203.4-203.4S715.4 228 715.4 340.2 624.2 543.6 512 543.6s-203.4-91.3-203.4-203.4z"
          />
        </svg>
      </i>
      <span>
        Application List
      </span>
    </a>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link"
    >
      Application
    </span>
    <span
      class="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;
